[project]
name = "be-base"
version = "0.1.0"
description = ""
authors = [
    {name = "Sanggeun Kim"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
package-mode = false
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "passlib[bycrypt] (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
